# wgpu_lua_fun

./: .gitignore  .luaurc  Cargo.toml  README.md  definition.d.lua
assets/scripts/: camera.luau  main.luau  player.luau
assets/shaders/: animated.wgsl  model.wgsl  triangle.wgsl
src/: app.rs  input.rs  lua.rs  main.rs  scene.rs  transform.rs
src/lua/: mod.rs  register.rs  scene.rs  shared.rs  utils.rs
src/render/: camera.rs  material.rs  mesh.rs  mod.rs  shader.rs  state.rs  texture.rs
src/render/bundle/: globals.rs  lights.rs  mod.rs  model.rs  triangle.rs
src/render/material/: mod.rs  simple.rs
