[package]
name = "wgpu_lua_fun"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
assets_manager = { version = "0.12.0", features = ["hot-reloading"] }
bytemuck = { version = "1.17.0", features = ["derive"] }
encase = { version = "0.9.0", features = ["glam"] }
env_logger = "0.11.5"
glam = { version = "0.28.0", features = ["serde"] }
log = "0.4.22"
mlua = { version = "0.9.9", features = ["luau", "serialize"] }
pollster = "0.3.0"
serde = { version = "1.0.209", features = ["derive"] }
tobj = "4.0.2"
wgpu = { version = "22.1.0", default-features = false, features = ["metal", "wgsl"] }
winit = { version = "0.30.5", default-features = false, features = ["rwh_06"] }

